<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/contentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:layout_marginTop="0dp"
        android:gravity="right"
        android:maxLines="1"
        android:paddingRight="15sp"
        android:text="@string/defaultText"
        android:textSize="60sp" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="0sp"
        android:gravity="center"
        android:text="@string/bt1"
        android:textColor="@drawable/shape"
        android:background="@drawable/btn"
        android:minHeight="70dp"
        android:minWidth="70dp"
        android:textSize="15sp" />
    <Button
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bt3"
        android:textSize="15sp"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/shape"
        android:background="@drawable/btn3"
        android:minHeight="70dp"
        android:minWidth="70dp"
        android:layout_marginTop="10sp"
        />
    <Button
        android:id="@+id/bt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bt7"
        android:textSize="15sp"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/shape"
        android:background="@drawable/btn3"
        android:minHeight="70dp"
        android:minWidth="70dp"
        android:layout_marginTop="10sp"
        />
    <Button
        android:id="@+id/bt11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bt11"
        android:textSize="15sp"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/shape"
        android:background="@drawable/btn3"
        android:minHeight="70dp"
        android:minWidth="70dp"
        android:layout_marginTop="10sp"
        />
    <Button
        android:id="@+id/bt15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bt15"
        android:textSize="15sp"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/shape"
        android:background="@drawable/btn3"
        android:minHeight="70dp"
        android:minWidth="70dp"
        android:layout_marginTop="10sp"
        />

    <Button
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120sp"
        android:layout_marginTop="-390sp"
        android:gravity="center"
        android:textColor="@drawable/shape"
        android:background="@drawable/btn"
        android:minHeight="70dp"
        android:minWidth="70dp"
        android:text="@string/bt2"

        android:textSize="15sp" />
    <Button
        android:id="@+id/bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/bt4"
        android:textColor="@drawable/shape"
        android:background="@drawable/btn3"
        android:minHeight="70dp"
        android:minWidth="70dp"
        android:textSize="15sp" />
    <Button
        android:id="@+id/bt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/bt8"
        android:background="@drawable/btn3"
        android:minHeight="70dp"
        android:minWidth="70dp"
        android:textColor="@drawable/shape"
        android:textSize="15sp" />
    <Button
        android:id="@+id/bt12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/bt12"
        android:textColor="@drawable/shape"
        android:background="@drawable/btn3"
        android:minHeight="70dp"
        android:minWidth="70dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt16"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginLeft="120sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/btn3"
        android:gravity="center"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:text="@string/bt16"
        android:textColor="@drawable/shape"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240sp"
        android:layout_marginTop="-390sp"
        android:gravity="center"
        android:text="@string/bt19"
        android:textColor="@drawable/shape"
        android:background="@drawable/btn"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="240sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:background="@drawable/btn3"
        android:textSize="15sp"
        android:textColor="@drawable/shape"
        android:text="@string/bt5" />
    <Button
        android:id="@+id/bt9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="240sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:background="@drawable/btn3"
        android:textSize="15sp"
        android:textColor="@drawable/shape"
        android:text="@string/bt9" />
    <Button
        android:id="@+id/bt13"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="240sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:background="@drawable/btn3"
        android:textSize="15sp"
        android:textColor="@drawable/shape"
        android:text="@string/bt13" />
    <Button
        android:id="@+id/bt18"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="240sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:background="@drawable/btn3"
        android:textSize="15sp"
        android:textColor="@drawable/shape"
        android:text="@string/bt18" />

    <Button
        android:id="@+id/bt20"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="339sp"
        android:layout_marginTop="-390sp"
        android:background="@drawable/btn2"
        android:gravity="center"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:text="@string/bt20"
        android:textColor="@drawable/shape"
        android:textSize="15sp" />
    <Button
        android:id="@+id/bt14"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="339sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/btn2"
        android:gravity="center"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:text="@string/bt14"
        android:textColor="@drawable/shape"
        android:textSize="15sp" />
    <Button
        android:id="@+id/bt10"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="339sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/btn2"
        android:gravity="center"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:text="@string/bt10"
        android:textColor="@drawable/shape"
        android:textSize="15sp" />
    <Button
        android:id="@+id/bt6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="339sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/btn2"
        android:gravity="center"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:text="@string/bt6"
        android:textColor="@drawable/shape"
        android:textSize="15sp" />
    <Button
        android:id="@+id/bt17"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="339sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/btn2"
        android:gravity="center"
        android:minWidth="70dp"
        android:minHeight="70dp"
        android:text="@string/bt17"
        android:textColor="@drawable/shape"
        android:textSize="15sp" />
</LinearLayout>
